# render-engine-pg-cms

./: .env.example  .gitignore  Dockerfile  README.md  fnox.toml  justfile  mise.toml  pyproject.toml
.claude/: settings.local.json.tmp.3070754.e8acca9ca064
docs/: ai.md  api.md  configuration.md  content-types.md  extension.md  index.md  migrations.md  publishing.md  syndication.md  uploads.md  webmentions.md
docs-site/: .gitignore  pyproject.toml  routes.py
docs-site/static/: style.css
docs-site/templates/: base.html  doc.html  docs_archive.html  index.html
docs/explanation/: ai-suggestions.md  architecture.md  publishing-model.md  syndication-model.md  webmention-pipeline.md
docs/how-to/: add-a-content-type.md  apply-a-migration.md  install-the-extension.md  sync-webmentions.md  syndicate-to-bluesky.md  syndicate-to-mastodon.md  trigger-a-publish.md  upload-images.md  use-the-json-api.md
docs/reference/: cli-recipes.md  configuration.md  database-schema.md  http-api.md  pyproject-schema.md
docs/tutorials/: first-post.md
extension/: README.md  manifest.json  options.html  options.js  popup.html  popup.js
sql/: bluesky_migration.sql  draft_schedule_migration.sql  mastodon_migration.sql  tags_trgm_migration.sql  webmention_types_migration.sql  webmentions_migration.sql
src/render_engine_pg_cms/: api.py  azure_blob.py  backport.py  bluesky.py  config.py  db.py  github.py  image_optimize.py  main.py  mastodon.py  ollama.py  webmention.py
src/render_engine_pg_cms/static/: style.css
src/render_engine_pg_cms/templates/: _icons.html  base.html  edit.html  (+4 more)
