[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render-engine-pg-cms"
version = "0.1.0"
description = "CMS web app for render-engine sites backed by PostgreSQL"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "markdown-it-py>=3.0",
  "azure-storage-blob>=12.19",
  "pillow>=10.3",
  "tomli;python_version<'3.11'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"render_engine_pg_cms" = ["templates/*.html", "static/*"]
