[project]
name = "render-engine-pg-cms-docs"
version = "0.1.0"
description = "Static docs site for render-engine-pg-cms, built with render-engine."
requires-python = ">=3.12"
dependencies = [
  "render-engine[cli]>=2026.3.4a3",
  "render-engine-markdown>=2023.12.1",
]

[tool.render-engine]
module = "routes"
site = "app"

[tool.render-engine.cli]
module = "routes"
site = "app"
